<resources>
    <string name="app_name">Revels 18</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_favourites">Favourites</string>
    <string name="drawer_pro_show">ProShow Portal</string>
    <string name="profile">Profile</string>
    <string name="refresh">Refresh</string>
    <string name="drawer_results">Results</string>
    <string name="drawer_developers">Developers</string>
    <string name="drawer_workshops">Workshops</string>
    <string name="drawer_about_us">About Us</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_events">Schedule</string>
    <string name="bottom_nav_categories">Categories</string>
    <string name="bottom_nav_revels_cup">Revels Cup</string>
    <string name="bottom_nav_results">Results</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="revels">Revels</string>
    <string name="revels_cup_results">Revels Cup Results</string>
    <string name="fest_name">Revels\'18</string>
    <string name="categories">Categories</string>
    <string name="action_search">Search</string>
    <string name="select_event_venue">Venue:</string>
    <string name="select_start_time">Start Time:</string>
    <string name="select_category">Category:</string>
    <string name="select_event_type">Event Type:</string>
    <string name="default_start_time">12:00 PM</string>
    <string name="default_end_time">11:00 PM</string>
    <string name="clear">CLEAR</string>
    <string name="select_end_time">End Time:</string>
    <string name="clear_filters">CLEAR FILTERS</string>
    <string name="apply_filter">APPLY</string>
    <string name="filter_events">Filter</string>
    <string name="no_favourites">No Favourites</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="pre_revels">Pre Revels</string>
    <string name="about_categories">About Categories</string>
    <string name="no_connection">No Connection</string>
    <string name="no_events">No Events</string>
    <string name="no_events2">No Events Available</string>
    <string name="no_categories">No Categories Available</string>
    <string name="unable_to_load_insta">Unable to load Instagram feed. Swipe down to retry!</string>
    <string name="home_insta_title">#Revels18 on Instagram</string>
    <string name="more">MORE</string>
    <string name="event_fragment">Events</string>
    <string name="retry">Retry</string>
    <string name="no_connection_text">Please connect to the internet and retry</string>
    <string name="no_results">Whoa Amigo!</string>
    <string name="no_results_2">The Results are not out yet.</string>
    <string name="NA">Not Available</string>
    <string name="no_data">No data available</string>
    <string name="results">Results</string>
    <string name="team_position">0</string>
    <string name="favourites">Favourites</string>
    <string name="action_delete_all">Delete All</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="cnt_wksp_1">Rishabh</string>
    <string name="cnt_wksp_2">Srishti</string>
    <string name="cntno_wksp_1">+919008146634</string>
    <string name="cntno_wksp_2">+919560702479</string>

    <string name="head">Head</string>
    <string name="developer">Developer</string>
    <string name="Anurag">Anurag Choudhary</string>
    <string name="Abhishek">Abhishek Vora</string>
    <string name="Gautham">Gautham Vinod</string>
    <string name="Rahul">Rahul Sathanapalli</string>
    <string name="Manas">Manas Gupta</string>
    <string name="Saptarshi">Saptarshi Roy Choudhuri</string>
    <string name="Mahima">Mahima Borah</string>
    <string name="Rhitam">Rhitam Dutta</string>
    <string name="Anjali">Anjali Premjit</string>
    <string name="Krishna">Krishna Birla</string>
    <string name="Shreyas">Shreyas Aiyar</string>
    <string name="Harsh">Harsh Mutha</string>
    <string name="Android">Android</string>
    <string name="IOS">iOS</string>
    <string name="Windows">Windows</string>
    <string name="about_us">One foot firmly rooted in our traditions. Another foot forward, towards a better future, marked by cleaner, and greener technology.
The Revels\'18 logo brings these two concepts together. Moreover, the colours signify a concept each. The red leaf signifies wars, an integral part of our traditional history. The orange flame is allegorical to the most primal form of energy. The blue water droplet and the green leaf signify cleaner forms of energy such as hydro, tidal, and geothermal.</string>
    <string name="team_id">Team ID</string>
    <string name="workshops">Workshops</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delegate_id">Delegate ID:</string>
    <string name="registration_number">Registration Number:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="college">College:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email2">Email</string>
    <string name="login_as_guest">Continue as Guest</string>
    <string name="sign_up">Sign up</string>
    <string name="event_reg">Event Registration</string>
    <string name="change_pwd">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="pwd_dont_match">Passwords don\'t match!</string>
    <string name="delegate_qr">Delegate QR</string>
    <string name="scan_qr_code">Scan Event QR</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reset">Reset</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="event_registration">Event Registration</string>
    <string name="register_team">Register Team</string>
    <string name="event_registrations">Event Registrations</string>
    <string name="event_name">Event Name</string>
    <string name="one">1.</string>
    <string name="add_team_member">Add Team Member</string>
    <string name="create_team">Create Team</string>
    <string name="max_team_size">Max Team Size:</string>
    <string name="cur_team_size">Current Team Size:</string>
    <string name="scan_qr_code_2">Scan Delegate QR</string>
    <string name="vs">vs</string>
    <string name="interpunct">·</string>
    <string name="team_id2">Team ID:</string>
</resources>
