<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/menu_registrations"
            android:title="@string/registrations"
            android:icon="@drawable/ic_registrations_24dp"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_favourites"
            android:title="@string/drawer_favourites"
            android:icon="@drawable/ic_fav_deselected"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_pro_show"
            android:title="@string/drawer_pro_show"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_about_us"
            android:title="@string/drawer_about_us"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_developers"
            android:title="@string/drawer_developers"
            app:showAsAction="never"/>

</menu>
