<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/padding_2x"
    android:paddingRight="@dimen/padding_2x"
    android:paddingTop="@dimen/padding_default"
    android:paddingBottom="@dimen/padding_default">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/repeat_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/unmatch_text_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd_dont_match"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_2x">

        <TextView
            android:id="@+id/cancel_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/no"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/typography_body"
            android:fontFamily="sans-serif-medium"
            android:layout_marginRight="@dimen/padding_2x"
            android:layout_marginEnd="@dimen/padding_2x"/>

        <TextView
            android:id="@+id/change_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/typography_body"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>
</LinearLayout>