<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_default"
            android:paddingBottom="@dimen/padding_half">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Windows"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/divider_horizontal_bright"
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginLeft="@dimen/padding_default"
                android:layout_marginRight="@dimen/padding_default"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/padding_half">

            <ImageView
                android:id="@+id/imageViewAndroid"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/dev_icon_gautham"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp" />


            <TextView
                android:id="@+id/textViewAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gautham"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewPositionAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_quarter">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_half"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="@dimen/padding_half"
                    android:src="@drawable/dev_icon_anjali" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Anjali"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:id="@+id/textView11" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/developer"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>