<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registrations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:elevation="4dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/AppBarTheme"
                android:elevation="4dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:clipChildren="false"
            android:clipToPadding="false">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Name"
                        android:textSize="@dimen/typography_title"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginBottom="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:drawable/divider_horizontal_bright"
                        android:layout_marginBottom="8dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delegate_id"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:fontFamily="sans-serif-medium"/>

                        <TextView
                            android:id="@+id/del_id_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Delegate ID"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/registration_number"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:fontFamily="sans-serif-medium"/>

                        <TextView
                            android:id="@+id/reg_no_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Registration Number"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:fontFamily="sans-serif-medium"/>

                        <TextView
                            android:id="@+id/phone_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Phone"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:fontFamily="sans-serif-medium"/>

                        <TextView
                            android:id="@+id/email_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Email"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/college"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:fontFamily="sans-serif-medium"/>

                        <TextView
                            android:id="@+id/college_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="College"
                            android:textSize="15sp" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delegate_qr"
                        android:textSize="@dimen/typography_title"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginBottom="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:drawable/divider_horizontal_bright"
                        android:layout_marginBottom="8dp"/>

                    <ImageView
                        android:id="@+id/qr_image_view"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_registrations"
                        android:textSize="@dimen/typography_title"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginBottom="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:drawable/divider_horizontal_bright"
                        android:layout_marginBottom="8dp"/>

                    <LinearLayout
                        android:id="@+id/event_reg_header"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_name"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_weight="1"
                            android:layout_marginRight="@dimen/padding_half"
                            android:layout_marginEnd="@dimen/padding_half"/>

                        <TextView
                            android:layout_weight="0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/team_id"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/black"
                            android:textSize="15sp"/>

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/event_reg_recycler_view"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="@dimen/padding_half"
                        android:id="@+id/no_reg_events"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_events"
                        android:textSize="15sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/event_reg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/event_reg"
                android:textColor="@color/white"
                android:textSize="@dimen/typography_title"
                android:background="@color/colorPrimary"
                />

            <!--<Button
                android:id="@+id/change_pwd_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/change_pwd"
                android:textColor="@color/white"
                android:textSize="@dimen/typography_title"
                android:background="@color/colorPrimaryDark"
                />-->

            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="@dimen/padding_half"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/typography_title"
                android:background="@color/colorAccent"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
